# research-paper-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py
app/clients/: arxiv.py  http.py  llm.py  telegram.py
app/core/: circuit_breaker.py  config.py  container.py  errors.py  logging.py  retry.py  utils.py
app/modules/: formatter.py  ranker.py  retriever.py  rewriter.py  summarizer.py  validator.py
app/observability/: metrics.py
app/orchestrator/: service.py
app/schemas/: domain.py  requests.py  responses.py
app/state/: redis_store.py  store.py
docs/: governance.md  product-proposal.md  system-design.md
docs/specs/: agent-orchestrator.md  memory.md  observability.md  retriever.md  serving-config.md  tools.md
tests/: test_api.py  test_arxiv_parser.py  test_formatter.py  test_validator.py
