[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-paper-agent"
version = "0.1.0"
description = "AI Research Paper Finder PoC based on Telegram, arXiv, and LLM orchestration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI scaffold generator" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "redis>=5.0.7,<6.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "structlog>=24.2.0,<25.0.0",
  "orjson>=3.10.6,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "respx>=0.21.1,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
